--- a/projects/shell/src/app/app.component.html
+++ b/projects/shell/src/app/app.component.html
@@ -2,6 +2,7 @@
     <li><img src="../assets/angular.png" width="50"></li>
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/flights">Flights</a></li>
+    <li><a routerLink="/other">Flights from MF2</a></li>
 </ul>
 
 <router-outlet></router-outlet>
